# pii-masker

./: .gitattributes  .gitignore  .gitmodules  README.md  book.key  build.sh  deanonymize.py  getting_started.py  main.py  pii.key  pii_masker.py  pii_masker.spec  pii_masker_local.py  pyproject.toml  test.key  test_mapping.json  test_masked.txt  unique_masker.py  unique_masker_original.py
analysis/: README.md  sample_1_gliner.txt  sample_1_ground_truth.txt  sample_1_input.txt  sample_1_multihead.txt  sample_2_gliner.txt  sample_2_ground_truth.txt  sample_2_input.txt  sample_2_multihead.txt  sample_3_gliner.txt  sample_3_ground_truth.txt  sample_3_input.txt  sample_3_multihead.txt  sample_4_gliner.txt  sample_4_ground_truth.txt  sample_4_input.txt  sample_4_multihead.txt  sample_5_gliner.txt  sample_5_ground_truth.txt  sample_5_input.txt  sample_5_multihead.txt
benchmark/: BENCHMARK_ANALYSIS_DE.md  BENCHMARK_ANALYSIS_FR.md  __init__.py  benchmark_results_de.json  benchmark_results_fr.json  cli.py  entity_normalizer.py  entity_schema.py  results.py
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
configs/: gliner_de.yaml  gliner_en.yaml  gliner_es.yaml  gliner_fr.yaml  gliner_it.yaml  local_multihead_de.yaml  local_multihead_en.yaml  local_multihead_fr.yaml  local_multihead_it.yaml  spacy_sm_en.yaml  stanza_de.yaml  stanza_en.yaml  stanza_es.yaml  stanza_fr.yaml  stanza_it.yaml  xlmr_de.yaml  xlmr_en.yaml  xlmr_es.yaml  xlmr_fr.yaml  xlmr_it.yaml
docs/: LAIA_PRD_TDD_v2_graphflow.md  NER_MODELS_ANALYSIS.md  pyinstaller-packaging.md
llm_approach/: benchmark_models.sh  big_book_chunk_ab  big_book_chunk_ac  big_book_chunk_ad  big_book_chunk_ae  big_book_chunk_af  big_book_chunk_ag  ground_truth.txt
llm_benchmarks/: big_book_chunk_aa  test_chunk.txt
native_host/: PROTOCOL.md  README.md  build_host_exe.ps1  com.pii_masker.host.json  host.py  host.spec  install_chrome_host.ps1  package-lock.json  package.json  playwright_diagnose_extension.mjs  playwright_test_upload.mjs  preinstall_extension_runtime.ps1  puppeteer_diagnose_extension.mjs  runtime_worker.py  smoke_native_host.py
test/: README.md
tests/: test_native_host.py  (+6 more)
(+78 files in other folders)
