[project]
name = "pii-masker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=26.0.1",
    "presidio-analyzer[stanza,transformers]>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "pypdf>=6.0.0",
    "reportlab>=4.4.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
