[project]
name = "pii-masker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "presidio-analyzer[gliner,stanza,transformers]>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "pypdf>=6.0.0",
    "reportlab>=4.4.4",
    # Spacy models (required for tokenization by transformers/gliner engines)
    "en_core_web_sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "de_core_news_sm@https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "es_core_news_sm@https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "fr_core_news_sm@https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl",
    "it_core_news_sm@https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-3.8.0/it_core_news_sm-3.8.0-py3-none-any.whl",
    "pt_core_news_sm@https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl",
    # PDF support for Chrome extension
    "pypdf>=6.0.0",
    "reportlab>=4.4.4",
]

[project.optional-dependencies]
benchmark = [
    "presidio-evaluator>=0.2.0",
    "datasets>=2.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pii_masker", "pii_masker.*", "benchmark", "benchmark.*"]

[tool.setuptools.package-data]
pii_masker = ["configs/*.yaml"]
benchmark = ["py.typed"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
